force-app/main/default/objects/Walkthrough__c/Walkthrough__c.object-meta.xml
<CustomObject>
    <description>Created by: JA
Business Unit: Leasing
Purpose: Keep track of unit/space walk throughs to check for damages</description>
    <label>Walkthrough</label>
    <nameField>
        <displayFormat>WT-{00000000}</displayFormat>
        <label>Walkthrough</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Walkthroughs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>