force-app/main/default/objects/Walkthrough__c/fields/BW_Rep_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>BW_Rep_Signature_Date__c</fullName>
    <description>Created by: JA
Business Unit: Leasing
Purpose: Track the date when the BW Rep signed the walkthrough</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BW Rep. Signature Date</label>
    <type>Date</type>
</CustomField>