force-app/main/default/objects/Walkthrough__c/fields/Carpets_Floors__c.field-meta.xml
<CustomField>
    <fullName>Carpets_Floors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by: JA
Business Unit: Leasing
Purpose: Track if the carpets and floors are in bad condition</description>
    <inlineHelpText>Are the carpets &amp; floors in bad condition?</inlineHelpText>
    <label>Carpets &amp; Floors?</label>
    <type>Checkbox</type>
</CustomField>