force-app/main/default/objects/Walkthrough__c/fields/Carpets_Floors_Description__c.field-meta.xml
<CustomField>
    <fullName>Carpets_Floors_Description__c</fullName>
    <description>Created by: JA
Business Unit: Leasing
Purpose: If Carpets &amp; Floors is checked, track the explanation why</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If carpets &amp; floors are in poor condition, explain why.</inlineHelpText>
    <label>Carpets &amp; Floors Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>