force-app/main/default/objects/Walkthrough__c/fields/Doors_Locks__c.field-meta.xml
<CustomField>
    <fullName>Doors_Locks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by: JA
Business Unit: Leasing
Purpose: Track if the doors and lock are in bad condition on move in/out</description>
    <inlineHelpText>Are the doors &amp; locks in bad condition?</inlineHelpText>
    <label>Doors &amp; Locks?</label>
    <type>Checkbox</type>
</CustomField>