force-app/main/default/objects/Walkthrough__c/fields/Doors_Locks_Description__c.field-meta.xml
<CustomField>
    <fullName>Doors_Locks_Description__c</fullName>
    <description>Created by: JA
Business Unit: Leasing
Purpose: If doors and locks are in poor condition, track the explanation why</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If doors &amp; locks are in poor condition, explain why.</inlineHelpText>
    <label>Doors &amp; Locks Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>