force-app/main/default/objects/Walkthrough__c/fields/Exceptions__c.field-meta.xml
<CustomField>
    <fullName>Exceptions__c</fullName>
    <description>Created by: JA
Business Unit: Leasing
Purpose: Track any specific exceptions to the acceptance of the unit.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Any specific exceptions to the acceptance of the unit? Any items not listed in this section are accepted as being in satisfactory condition.</inlineHelpText>
    <label>Exceptions?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>