force-app/main/default/objects/Walkthrough__c/fields/Excessive_Cleaning_Description__c.field-meta.xml
<CustomField>
    <fullName>Excessive_Cleaning_Description__c</fullName>
    <description>Created by: JA
Business Unit: Leasing
Purpose: If excessive cleaning is required, tracks the explanation of what needs done?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If excessive cleaning is required, explain why.</inlineHelpText>
    <label>Excessive Cleaning Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>