force-app/main/default/objects/Walkthrough__c/fields/Excessive_Cleaning_Required__c.field-meta.xml
<CustomField>
    <fullName>Excessive_Cleaning_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by: JA
Business Unit: Leasing
Purpose: Track if a space/unit needs excessive cleaning prior to move-in/out</description>
    <inlineHelpText>Does the space need excessive cleaning?</inlineHelpText>
    <label>Excessive Cleaning Required?</label>
    <type>Checkbox</type>
</CustomField>