force-app/main/default/objects/Walkthrough__c/fields/Final_Invoice_Recieved__c.field-meta.xml
<CustomField>
    <fullName>Final_Invoice_Recieved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by: JA
Business Unit: Leasing
Purpose: Track if the final invoice was received.</description>
    <inlineHelpText>Has the final invoice been received?</inlineHelpText>
    <label>Final Invoice Received?</label>
    <type>Checkbox</type>
</CustomField>