force-app/main/default/objects/Walkthrough__c/fields/Finance_Sign_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Finance_Sign_Off_Date__c</fullName>
    <description>Created by: JA
Business Unit: Leasing
Purpose: Track the date when finance signed off the walkthrough?</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Finance Sign-Off Date</label>
    <type>Date</type>
</CustomField>