force-app/main/default/objects/Walkthrough__c/fields/Fixtures_Appliances__c.field-meta.xml
<CustomField>
    <fullName>Fixtures_Appliances__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by: JA
Business Unit:  Leasing
Purpose: Track if the fixtures and appliances are in bad condition upon move in/out</description>
    <inlineHelpText>Are the fixtures &amp; appliances in bad condition?</inlineHelpText>
    <label>Fixtures &amp; Appliances?</label>
    <type>Checkbox</type>
</CustomField>