force-app/main/default/objects/Walkthrough__c/fields/Fixtures_Appliances_Description__c.field-meta.xml
<CustomField>
    <fullName>Fixtures_Appliances_Description__c</fullName>
    <description>Created by: JA
Business Unit: Leasing
Purpose: If fixtures and appliances are in poor condition, tracks the description why</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If fixtures &amp; appliances are in poor condition, explain why.</inlineHelpText>
    <label>Fixtures &amp; Appliances Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>