force-app/main/default/objects/Walkthrough__c/fields/Keys_Given__c.field-meta.xml
<CustomField>
    <fullName>Keys_Given__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by: JA
Business Unit: Leasing
Purpose: Track if the keys were given to the tenant</description>
    <inlineHelpText>Have keys been given to the tenant?</inlineHelpText>
    <label>Keys Given?</label>
    <type>Checkbox</type>
</CustomField>