force-app/main/default/objects/Walkthrough__c/fields/Keys_Returned__c.field-meta.xml
<CustomField>
    <fullName>Keys_Returned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by: JA
Business Unit: Leasing
Purpose: Track if the tenant returned the keys</description>
    <inlineHelpText>Has the tenant returned their keys?</inlineHelpText>
    <label>Keys Returned?</label>
    <type>Checkbox</type>
</CustomField>