force-app/main/default/objects/Walkthrough__c/fields/Lease__c.field-meta.xml
<CustomField>
    <fullName>Lease__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by: JA
Business Unit: Leasing
Purpose: Track the lease the walk through is for</description>
    <inlineHelpText>Which lease is the walk through for?</inlineHelpText>
    <label>Lease</label>
    <referenceTo>Lease__c</referenceTo>
    <relationshipName>Walk_Throughs</relationshipName>
    <type>Lookup</type>
</CustomField>