force-app/main/default/objects/Walkthrough__c/fields/Lease_Signed__c.field-meta.xml
<CustomField>
    <fullName>Lease_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by: JA
Business Unit: Leasing
Purpose: Track if the lease was signed prior to the move in walk through</description>
    <inlineHelpText>Has the lease been signed?</inlineHelpText>
    <label>Lease Signed?</label>
    <type>Checkbox</type>
</CustomField>