force-app/main/default/objects/Walkthrough__c/fields/Money_Collected__c.field-meta.xml
<CustomField>
    <fullName>Money_Collected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by: JA
Business Unit: Leasing
Purpose: Track if the money has been collected prior to walk through</description>
    <inlineHelpText>Has all the money been collected?</inlineHelpText>
    <label>Money Collected?</label>
    <type>Checkbox</type>
</CustomField>