force-app/main/default/objects/Walkthrough__c/fields/num_of_Keys_Issued__c.field-meta.xml
<CustomField>
    <fullName>num_of_Keys_Issued__c</fullName>
    <description>Created by: JA
Business Unit: Leasing
Purpose: Track the number of keys issued to the tenant</description>
    <inlineHelpText>How many keys were issued?</inlineHelpText>
    <label># of Keys Issued</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>