force-app/main/default/objects/Walkthrough__c/fields/num_of_Keys_Returned__c.field-meta.xml
<CustomField>
    <fullName>num_of_Keys_Returned__c</fullName>
    <description>Created by: JA
Business Unit: Leasing
Purpose: Track the number of keys returned after Move out</description>
    <inlineHelpText>How many keys were returned?</inlineHelpText>
    <label># of Keys Returned?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>