force-app/main/default/objects/Walkthrough__c/fields/num_of_Parking_Passes_Issued__c.field-meta.xml
<CustomField>
    <fullName>num_of_Parking_Passes_Issued__c</fullName>
    <description>Created by: JA
Business Unit: Leasing
Purpose: Track the number of parking passes issued</description>
    <inlineHelpText>How many parking passes were issued?</inlineHelpText>
    <label># of Parking Passes Issued</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>