force-app/main/default/objects/Walkthrough__c/fields/Parking_Passes_Given__c.field-meta.xml
<CustomField>
    <fullName>Parking_Passes_Given__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by: JA
Business Unit: Leasing
Purpose: Track if parking passes were given during a walkthrough</description>
    <inlineHelpText>Have parking passes been given to the tenant?</inlineHelpText>
    <label>Parking Passes Given?</label>
    <type>Checkbox</type>
</CustomField>