force-app/main/default/objects/Walkthrough__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by: JA
Business Unit: Leasing
Purpose: Track the primary contact for a walkthrough</description>
    <inlineHelpText>Who is the primary contact for this walkthrough?</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Walkthroughs</relationshipLabel>
    <relationshipName>Walkthroughs</relationshipName>
    <type>Lookup</type>
</CustomField>