force-app/main/default/objects/Walkthrough__c/fields/Proof_of_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by: JA
Business Unit: Leasing
Purpose: Track if proof of insurance was collected</description>
    <label>Proof of Insurance?</label>
    <type>Checkbox</type>
</CustomField>