force-app/main/default/objects/Walkthrough__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by: JA
Business Unit: Leasing
Purpose: Track the tenant on a given walk through</description>
    <inlineHelpText>Who is the tenant?</inlineHelpText>
    <label>Tenant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Walkthroughs</relationshipLabel>
    <relationshipName>Walk_Throughs</relationshipName>
    <type>Lookup</type>
</CustomField>