force-app/main/default/objects/Walkthrough__c/fields/Tenant_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Signature_Date__c</fullName>
    <description>Created by: JA
Business Unit: Leasing
Purpose: Track the date a tenant signed a walkthrough</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tenant Signature Date</label>
    <type>Date</type>
</CustomField>