force-app/main/default/objects/Walkthrough__c/fields/Walls_Ceilings_Cabinets__c.field-meta.xml
<CustomField>
    <fullName>Walls_Ceilings_Cabinets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by: JA
Business Unit: Leasing
Purpose: Track if the walls, ceilings, and cabinets are in bad condition on movein/out</description>
    <inlineHelpText>Are the walls, ceilings, &amp; cabinets in bad condition?</inlineHelpText>
    <label>Walls, Ceilings, &amp; Cabinets?</label>
    <type>Checkbox</type>
</CustomField>