force-app/main/default/objects/Walkthrough__c/fields/Walls_Ceilings_Cabinets_Description__c.field-meta.xml
<CustomField>
    <fullName>Walls_Ceilings_Cabinets_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If walls, ceilings, &amp; cabinets are in poor condition, explain why.</inlineHelpText>
    <label>Walls, Ceilings, &amp; Cabinets Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>