force-app/main/default/objects/Walkthrough__c/fields/Windows_Blinds__c.field-meta.xml
<CustomField>
    <fullName>Windows_Blinds__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by: JA
Business Unit: Leasing
Purpose: Track if the windows and blinds are in bad condition on move in/out</description>
    <inlineHelpText>Are the windows &amp; blinds in bad condition?</inlineHelpText>
    <label>Windows &amp; Blinds?</label>
    <type>Checkbox</type>
</CustomField>