force-app/main/default/objects/Walkthrough__c/fields/Windows_Blinds_Description__c.field-meta.xml
<CustomField>
    <fullName>Windows_Blinds_Description__c</fullName>
    <description>Created by: JA
Business Unit: Leasing
Purpose: If windows and blinds are in poor condition, track the explanation why</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If windows &amp; blinds are in poor condition, explain why.</inlineHelpText>
    <label>Windows &amp; Blinds Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>