force-app/main/default/objects/Walkthrough__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by: JA
Business Unit: Leasing
Purpose: Track if a work order is needed for a unit upon a walkthrough</description>
    <inlineHelpText>Is a work order needed?</inlineHelpText>
    <label>Work Order?</label>
    <type>Checkbox</type>
</CustomField>