force-app/main/default/objects/Walkthrough__c/fields/Work_Order_Description__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Description__c</fullName>
    <description>Created by: JA
Business Unit: Leasing
Purpose: If a work order is need, describe the work needed to be done</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What work needs to be done?</inlineHelpText>
    <label>Work Order Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>