force-app/main/default/objects/Walkthrough__c/recordTypes/Move_Out.recordType-meta.xml
<RecordType>
    <fullName>Move_Out</fullName>
    <active>true</active>
    <label>Move Out</label>
</RecordType>